# gtk-native-tweaks

./: .gitignore  README.md  gnt.h  gnt_macos.c  gnt_macos.h  meson.build  meson_options.txt
example/: gnt_macos_demo.py
subprojects/googletest-1.14.0/: .meson-subproject-wrap-hash.txt
test/: gnt_macos_test.cc  helpers.h  meson.build
